--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,7 @@ require Pod::Executable.execute_command('node', ['-p',
   )', __dir__]).strip
 
 platform :ios, min_ios_version_supported
+ENV['RCT_NEW_ARCH_ENABLED'] = '0'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
