--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "@react-native/new-app-screen": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^7.1.0",
+    "@react-navigation/bottom-tabs": "^7.1.0",
+    "@react-navigation/native-stack": "^7.1.0",
+    "react-native-svg": "^15.6.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,6 +37,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
